--- a/Proiect2/Proiect2.vcxproj.filters
+++ b/Proiect2/Proiect2.vcxproj.filters
@@ -61,5 +61,16 @@
     <None Include="sun.frag">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="skybox.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="skybox.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="skybox.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
